--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,6 +43,12 @@ play.i18n.langs = [ "en" ]
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
 
+akka {
+  loglevel = INFO
+
+  extensions = ["kamon.akka.Akka", "kamon.statsd.StatsD"]
+}
+
 kamon {
   metric {
     tick-interval = 1 seconds
@@ -74,5 +80,6 @@ kamon {
     kamon-log-reporter.auto-start = no
     kamon-system-metrics.auto-start = yes
     kamon-statsd.auto-start = yes
+    kamon-akka.auto-start = yes
   }
 }
